# mcp-experiment

./: .dockerignore  Dockerfile  README.md  main.py  notebook.ipynb  pyproject.toml
mcp_experiment/resources/: __init__.py
mcp_experiment/tools/: __init__.py
