[project]
name = "mcp-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["mcp[cli] (>=1.6.0,<2.0.0)", "litellm (>=1.66.0,<2.0.0)", "anthropic (>=0.49.0,<0.50.0)", "ollama (>=0.4.7,<0.5.0)"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
